--- a/functionary/ui/static/css/functionary.css
+++ b/functionary/ui/static/css/functionary.css
@@ -1,3 +1,10 @@
+.logo-blue {
+    filter: brightness(0) saturate(100%) invert(29%) sepia(87%) saturate(1396%) hue-rotate(214deg) brightness(88%) contrast(80%);
+}
+.functionary-logo {
+    margin-bottom: -1px;
+    margin-right: -1rem;
+}
 .functionary-title {
     margin-left: -1rem;
 }
