--- a/functionary/ui/templates/partials/environments/environment_management.html
+++ b/functionary/ui/templates/partials/environments/environment_management.html
@@ -28,18 +28,28 @@
                 <td>{{ u.role }}</td>
                 <td>{{ u.origin }}</td>
                 <td>
-                    <button class="button is-small has-text-link is-white singletonActive"
-                            hx-get="{% url 'ui:update-environment-member' environment_id=environment_id user_id=u.user.id %}"
-                            hx-target="#update-modal">
-                        <span class="fa fa-pencil-alt"></span>
-                    </button>
+                    {% if u.environment_user_role_id %}
+                        <button class="button is-small has-text-link is-white singletonActive"
+                                hx-get="{% url 'ui:update-environment-member' environment_id u.environment_user_role_id %}"
+                                hx-target="#update-modal">
+                            <span class="fa fa-pencil-alt"></span>
+                        </button>
+                    {% else %}
+                        <button class="button is-small has-text-link is-white singletonActive"
+                                hx-get="{% url 'ui:create-environment-member' environment_id u.user.id %}"
+                                hx-target="#update-modal">
+                            <span class="fa fa-pencil-alt"></span>
+                        </button>
+                    {% endif %}
                 </td>
                 <td>
-                    <button class="button is-small has-text-link is-white singletonActive"
-                            hx-delete="{% url 'ui:delete-environment-member' environment_id=environment_id user_id=u.user.id %}"
-                            hx-confirm="Are you sure you want to remove {{ u.user.username }}'s explicit role from this environment?">
-                        <span class="fa fa-trash"></span>
-                    </button>
+                    {% if u.environment_user_role_id %}
+                        <button class="button is-small has-text-link is-white singletonActive"
+                                hx-post="{% url 'ui:delete-environment-member' environment_id u.environment_user_role_id %}"
+                                hx-confirm="Are you sure you want to remove {{ u.user.username }}'s explicit role from this environment?">
+                            <span class="fa fa-trash"></span>
+                        </button>
+                    {% endif %}
                 </td>
             </tr>
         {% endfor %}
