--- a/functionary/ui/templates/partials/teams/team_management.html
+++ b/functionary/ui/templates/partials/teams/team_management.html
@@ -27,14 +27,14 @@
                 <td>{{ u.role }}</td>
                 <td>
                     <button class="button is-small has-text-link is-white singletonActive"
-                            hx-get="{% url 'ui:update-team-member' team_id=team_id user_id=u.user.id %}"
+                            hx-get="{% url 'ui:update-team-member' team_id u.team_user_role_id %}"
                             hx-target="#update-modal">
                         <span class="fa fa-pencil-alt"></span>
                     </button>
                 </td>
                 <td>
                     <button class="button is-small has-text-link is-white singletonActive"
-                            hx-delete="{% url 'ui:delete-team-member' team_id=team_id user_id=u.user.id %}"
+                            hx-post="{% url 'ui:delete-team-member' team_id u.team_user_role_id %}"
                             hx-confirm="Are you sure you want to remove {{ u.user.username }}'s from this team?"
                             hx-target="closest tr"
                             hx-swap="outerHTML swap:1s">
