#143 - UI: Workflows and WorkflowParameters (#165)

--- a/functionary/ui/templates/account/login.html
+++ b/functionary/ui/templates/account/login.html
@@ -22,8 +22,9 @@
               href="{% static 'css/bulma-0.9.4.min.css' %}"
               type="text/css"/>
         <link rel="stylesheet" href="{% static 'css/brands.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/fontawesome-6.2.1.min.css' %}"/>
         <link rel="stylesheet"
-              href="{% static 'css/fontawesome-solid-5.15.4.min.css' %}"/>
+              href="{% static 'css/fontawesome-solid-6.2.1.min.css' %}"/>
         <link rel="stylesheet"
               href="{% static 'css/functionary.css' %}"
               type="text/css"/>
