--- a/functionary/ui/templates/admin/base_site.html
+++ b/functionary/ui/templates/admin/base_site.html
@@ -9,7 +9,10 @@
           href="{% static 'css/bulma-0.9.4.min.css' %}"
           type="text/css"/>
     <link rel="stylesheet"
-          href="{% static 'css/fontawesome-all-5.15.4.min.css' %}"
+          href="{% static 'css/fontawesome-6.2.1.min.css' %}"
+          type="text/css"/>
+    <link rel="stylesheet"
+          href="{% static 'css/fontawesome-solid-6.2.1.min.css' %}"
           type="text/css"/>
     <link rel="stylesheet"
           href="{% static 'css/functionary.css' %}"
