--- a/functionary/ui/templates/partials/teams/user_list.html
+++ b/functionary/ui/templates/partials/teams/user_list.html
@@ -1,5 +1,5 @@
 <div id="user-list-block">
-    {% if not usernames|length %}
+    {% if not usernames|length and username|length %}
     <ul class="errorlist">
         <li>User not found.</li>
     </ul>
