#147 - UI: User role management (#150)

--- a/functionary/ui/templates/core/environment_detail.html
+++ b/functionary/ui/templates/core/environment_detail.html
@@ -27,6 +27,10 @@
                     <i class="fa fa-users"></i>&nbsp;{{ environment.team.name }}
                 </div>
             </div>
+
+            <div class="field">
+                {% include "partials/environments/environment_management.html" %}
+            </div>
             {% include 'partials/variables_section.html' with parent_object=environment parent_id=environment.id %}
             <div class="field">
                 <label class="label" for="packages">
