--- a/functionary/ui/templates/core/workflow_detail.html
+++ b/functionary/ui/templates/core/workflow_detail.html
@@ -20,4 +20,5 @@
     <hr/>
     <div class="block">{% include "partials/workflows/parameter_list.html" %}</div>
     <hr/>
+    <div class="block">{% include "partials/workflows/step_list.html" %}</div>
 {% endblock content %}
