#143 - Reorder workflow steps (#171)

--- a/functionary/ui/templates/partials/workflows/step_list.html
+++ b/functionary/ui/templates/partials/workflows/step_list.html
@@ -5,6 +5,8 @@
     <table class="table is-striped">
         <thead>
             <tr>
+                <th></th>
+                <th></th>
                 <th>Name</th>
                 <th>Function</th>
                 <th>Parameters</th>
@@ -13,7 +15,37 @@
         </thead>
         <tbody id="steps">
             {% for step in workflow.ordered_steps %}
-                <tr>
+                <tr id="step-{{ step.id }}">
+                    <td>
+                        {% with previous=step.previous %}
+                            {% if previous is not None %}
+                                <form id="step-{{ step.id }}-move-up"
+                                      method="post"
+                                      hx-post="{% url 'ui:workflowstep-move' workflow.pk step.pk %}"
+                                      hx-target="#workflow-steps"
+                                      hx-swap="OuterHTML">
+                                    <input type="hidden" name="next" value="{{ previous.id }}"/>
+                                    <button class="button is-small is-white has-text-info fa fa-chevron-up"
+                                            type="submit"
+                                            title="Move Step Up"/>
+                                </form>
+                            {% endif %}
+                        {% endwith %}
+                    </td>
+                    <td>
+                        {% if step.next is not None %}
+                            <form id="step-{{ step.id }}-move-down"
+                                  method="post"
+                                  hx-post="{% url 'ui:workflowstep-move' workflow.pk step.pk %}"
+                                  hx-target="#workflow-steps"
+                                  hx-swap="OuterHTML">
+                                <input type="hidden" name="next" value="{{ step.next.next.id }}"/>
+                                <button class="button is-small is-white has-text-info fa fa-chevron-down"
+                                        type="submit"
+                                        title="Move Step Down"/>
+                            </form>
+                        {% endif %}
+                    </td>
                     <td>{{ step.name }}</td>
                     <td>{{ step.function }}</td>
                     <td class="json-container">{{ step.parameter_template }}</td>
