#167 - ScheduledTask now use class based views

--- a/functionary/ui/templates/forms/schedules/scheduling_create_or_update.html
+++ b/functionary/ui/templates/forms/schedules/scheduling_create_or_update.html
@@ -3,10 +3,14 @@
 {% block content %}
 <div class="block">
     {% if form %}
-        <form id="scheduled-task-create-form"
-                method="post"
-                action="{% url 'ui:update-schedule' scheduledtask.id %}">
-            {% csrf_token %}
+        
+        {% if update %}
+            <form method="post" action="{% url 'ui:update-schedule' scheduledtask.id %}">
+        {% else %}
+            <form method="post" action="{% url 'ui:create-schedule' %}">
+        {% endif %}
+            
+        {% csrf_token %}
             
             <!-- Non-Field Errors display -->
             <div class="columns is-centered">
@@ -49,7 +53,8 @@
 
                 <hr/>
 
-                <!-- Status row/field -->
+                {% comment %} Should only render on update page {% endcomment %}
+                {% if update %}
                 <div class="field">
                     <div class="columns is-8">
                         <div class="column is-one-third">
@@ -72,8 +77,9 @@
                         </div>
                     </div>
                 </div>
-
+                
                 <hr/>
+                {% endif %}
 
                 <!-- Description row/field -->
                 <div class="field">
@@ -223,15 +229,17 @@
                             <div class="column p-0 is-italic subtitle is-size-6">
                                 Please enter the parameters for the function.
                             </div>
-                            <div class="errorlist">
-                                {% if param_errors is not None %}
-                                    {{ param_errors }}
-                                {% endif %}
+                        </div>
+
+                        {% comment %} Render function param form if available. Else, lazy load. {% endcomment %}
+                        {% if task_parameter_form %}
+                            <div class="column" id="function-parameters">
+                                {{ task_parameter_form }}
                             </div>
-                        </div>
-                        <div class="column" id="function-parameters">
-                            {% include "forms/task_parameters.html" with form=parameter_form %}
-                        </div>
+                        {% else %}
+                            <div class="column" id="function-parameters" hx-trigger="load" hx-get="{% url 'ui:function-parameters' %}" hx-vals='{"function": "{{ function_id }}"}'>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
 
