--- a/functionary/ui/templates/core/workflow_list.html
+++ b/functionary/ui/templates/core/workflow_list.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div>
         <div class="level-right">
-            {% if user_has_workflow_create %}
+            {% if request.session.user_can_create_workflow %}
                 <button class="button level-item is-link m-5"
                         hx-target="body"
                         hx-swap="beforeend"
