--- a/functionary/ui/templates/home.html
+++ b/functionary/ui/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
   <div class="content">
     <h1>Hello {{ user.username }}!</h1>
-    {% if not user.environments and not user.is_superuser %}
+    {% if not user.environments %}
       <p>
         You are not a member of any environments. Please contact an administrator to be assigned to an environment to start using Functionary.
       </p>
