--- a/functionary/ui/templates/core/workflow_list.html
+++ b/functionary/ui/templates/core/workflow_list.html
@@ -3,42 +3,21 @@
     <div>
         <div class="level-right">
             {% if request.session.user_can_create_workflow %}
-                <button class="button level-item is-link m-5"
+                <button class="button level-item is-link mb-5 mt-5"
                         hx-target="body"
                         hx-swap="beforeend"
                         hx-get="{% url 'ui:workflow-create' %}">
                     <span class="icon is-small">
                         <i class="fa fa-solid fa-plus"></i>
                     </span>
-                    <span>Create</span>
+                    <span>Create New Workflow</span>
                 </button>
             {% else %}
                 <!--add a spacer when the button is not present-->
-                <div class="mb-6"></div>
+                <div class="mb-5"></div>
             {% endif %}
         </div>
-        <div class="table-container">
-            <table class="table is-hoverable is-fullwidth">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Creator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for workflow in object_list %}
-                        <tr>
-                            <td>
-                                <a href="{% url 'ui:workflow-detail' workflow.id %}">{{ workflow.name }}</a>
-                            </td>
-                            <td>{{ workflow.description }}</td>
-                            <td>{{ workflow.creator.username }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include "partials/workflows/list.html" %}
     </div>
     {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
